--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <div id="content">
 <h1>A call to action failed, despite gun violence in America and bipartisan support for reform</h1>
 <p></p>
-
+<iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <iframe src="money.html" frameBorder="0"></iframe>
 </div>
