add timeline to main.html

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 <div id="content">
 <h1>A call to action failed, despite gun violence in America and bipartisan support for reform</h1>
 <p></p>
+<iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe> 
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <iframe src="money.html" frameBorder="0"></iframe>
