--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Jordan Branch: Paint Branch tributary sustainability project secures funding</title>
+<title>Gun Rights in America: The search for a bill on the Hill</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
@@ -11,7 +11,7 @@
 <div id="content">
 <h1>A call to action failed, despite gun violence in America and bipartisan support for reform</h1>
 <p></p>
-<iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe> 
+<iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=500' width='100%' height='800' frameborder='0'></iframe> 
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <iframe src="money.html" frameBorder="0"></iframe>
