--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <title>Jordan Branch: Paint Branch tributary sustainability project secures funding</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+<link rel="icon" type="image/png" href=""https://s3.amazonaws.com/cdn.knightlab.com/libs/timeline/latest/embed"">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <iframe src="money.html" frameBorder="0"></iframe>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
+<iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='600' height='600' frameborder='0'></iframe>
 </div>
 </body>
 </html>
