--- a/MTvote.html
+++ b/MTvote.html
@@ -17,6 +17,9 @@ $(function () {
             plotShadow: false,
             type: 'pie'
         },
+		    credits: {
+            text: 'Produced by: Jordan Branch',
+        },
         title: {
             text: 'Manchin-Toomey Amendment Senate <br> Voting Outcome'
         },
