--- a/main.html
+++ b/main.html
@@ -5,18 +5,46 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 <link rel="icon" type="image/png" href=""https://s3.amazonaws.com/cdn.knightlab.com/libs/timeline/latest/embed"">
+<link href="https://infogr.am/manchin_toomey_amendment_voting_outcome">
 </head>
 
 <body>
-<div class="banner"></div>
+<h1>Gun rights in America</h1>
+<h3>The search for a bill on the Hill</h3>
 <div id="content">
-<h1>A call to action failed, despite gun violence in America and bipartisan support for reform</h1>
-<p></p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a nationwide problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
+
+<p><em>Mother Jones</em> has compiled a list of mass shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. The United States is a leader in mass shootings. University of Alabama criminology professor Adam Lankford found that the U.S. accounted for one-third of worldwide mass shootings with datat from 1966 to 2012. The study found that widespread, often uncensored gun ownership might be a large reason for the climate of violence in this country.</p>
+<div class="timeline">
+  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe></div>
+  <p>Beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Increased crime and violence in Baltimore has also been reflected in national statistics where gun-related deaths are climbing.</p>
+  <p>Looking at gun-related death statistics, Hillary Clinton recently sent out a tweet of support for stricter gun laws.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+</div>
+<div class="banner2"></div>
+<div id="content">
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effor to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
-<iframe src="money.html" frameBorder="0"></iframe>
+<p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<div class="infogram">
+<iframe src="https://infogr.am/manchin_toomey_amendment_voting_outcome?src=embed" title="Manchin-Toomey Amendment voting outcome" width="550" height="596" scrolling="no" frameborder="0" style="border:none;"></iframe></div>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+</div>
+<div class="banner3"></div>
+<div id="content">
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
-<iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='600' height='600' frameborder='0'></iframe>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<iframe src="money.html" frameBorder="0"></iframe>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 </div>
 </body>
 </html>
