--- a/money.html
+++ b/money.html
@@ -14,6 +14,9 @@ $(function () {
         chart: {
             type: 'column'
         },
+		    credits: {
+            text: 'Produced by: Jordan Branch',
+        },
         title: {
             text: 'PAC Contributions to Senators leading up to Manchin-Toomey Amendment'
         },
