--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Jordan Branch: Paint Branch tributary sustainability project secures funding</title>
+<title>Gun Rights in America: The search for a bill on the Hill</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 <link rel="icon" type="image/png" href=""https://s3.amazonaws.com/cdn.knightlab.com/libs/timeline/latest/embed"">
