--- a/main.html
+++ b/main.html
@@ -16,9 +16,10 @@
 
 <p><em>Mother Jones</em> has compiled a list of mass shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. The United States is a leader in mass shootings. University of Alabama criminology professor Adam Lankford found that the U.S. accounted for one-third of worldwide mass shootings with datat from 1966 to 2012. The study found that widespread, often uncensored gun ownership might be a large reason for the climate of violence in this country.</p>
 <div class="timeline">
-  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe></div>
-  <p>Beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Increased crime and violence in Baltimore has also been reflected in national statistics where gun-related deaths are climbing.</p>
-  <p>Looking at gun-related death statistics, Hillary Clinton recently sent out a tweet of support for stricter gun laws.</p>
+  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
+</div>
+<p>Beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Increased crime and violence in Baltimore has also been reflected in national statistics where gun-related deaths are climbing.</p>
+<p>Looking at gun-related death statistics, Hillary Clinton recently sent out a tweet of support for stricter gun laws.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 <p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
