--- a/money.html
+++ b/money.html
@@ -25,8 +25,8 @@ $(function () {
         },
         xAxis: {
             categories: [
+                'Gun Rights PAC',
                 'Gun Control PAC',
-                'Gun Rights PAC'
             ],
             crosshair: true
         },
