remove repeated paragraphs

--- a/main.html
+++ b/main.html
@@ -21,36 +21,25 @@
 <p>Beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Increased crime and violence in Baltimore has also been reflected in national statistics where gun-related deaths are climbing.</p>
 <p>Looking at gun-related death statistics, Hillary Clinton recently sent out a tweet of support for stricter gun laws.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
-<h3>The number of gun-related deaths has been steadily increasing over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33636.</h3>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>The number of gun-related deaths has been steadily increasing over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33636.</p>
+
 </div>
 <div class="banner2"></div>
 <div id="content">
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effor to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <h3>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</h3>
 <p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 <div class="infogram">
 <iframe src="https://infogr.am/manchin_toomey_amendment_voting_outcome?src=embed" title="Manchin-Toomey Amendment voting outcome" width="550" height="596" scrolling="no" frameborder="0" style="border:none;"></iframe></div>
-<h3>48 Democrats, 4 Republicans, and 2 Independets were in favor of Manchin-Toomey Amendment.</h3>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
 </div>
 <div class="banner3"></div>
 <div id="content">
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
-<h3>There is strong support both political parties for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</h3>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>There is strong support both political parties for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
 <iframe src="money.html" frameBorder="0"></iframe>
-<h3>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</h3>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to this nationwide problem. Obama has promoted gun control legislation in 15 speeches.</p>
+<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
 </div>
 </body>
 </html>
