mid-point presentation version

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Gun Rights in America: The search for a bill on the Hill</title>
+<title>Gun Rights in America: The search for a bill on the Hill</title></title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 <link rel="icon" type="image/png" href=""https://s3.amazonaws.com/cdn.knightlab.com/libs/timeline/latest/embed"">
@@ -12,23 +12,20 @@
 <h1>Gun rights in America</h1>
 <h2>The search for a bill on the Hill</h2>
 <div id="content">
-<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a nationwide problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
+<p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
 
-<p><em>Mother Jones</em> has compiled a list of mass shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. The United States is a leader in mass shootings. University of Alabama criminology professor Adam Lankford found that the U.S. accounted for one-third of worldwide mass shootings with datat from 1966 to 2012. The study found that widespread, often uncensored gun ownership might be a large reason for the climate of violence in this country.</p>
+<p>Many of Obama's calls to action have followed multiple-casualty mass shootings. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 10 most deadly mass shootings, 6 occured after 2007. In fact, the United States has become a world leader in mass shootings, University of Alabama criminology professor Adam Lankford found. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored gun ownership might be a large reason for the climate of gun violence in this country.</p>
 <div class="timeline">
-  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
-</div>
-<p>Beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Increased crime and violence in Baltimore has also been reflected in national statistics where gun-related deaths are climbing.</p>
-<p>Looking at gun-related death statistics, Hillary Clinton recently sent out a tweet of support for stricter gun laws.</p>
+  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe></div>
+<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
-<p>The number of gun-related deaths has been steadily increasing over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33636.</p>
-
+<p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33636.</p>
 </div>
 <div class="banner2"></div>
 <div id="content">
 <p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
-<h3>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</h3>
+<p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
 <p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
 <div class="infogram">
 <iframe src="https://infogr.am/manchin_toomey_amendment_voting_outcome?src=embed" title="Manchin-Toomey Amendment voting outcome" width="550" height="596" scrolling="no" frameborder="0" style="border:none;"></iframe></div>
@@ -37,7 +34,7 @@
 <div class="banner3"></div>
 <div id="content">
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
-<p>There is strong support both political parties for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
+<p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
 <iframe src="money.html" frameBorder="0"></iframe>
 <p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
 </div>
