removed exporting button

--- a/MTvote.html
+++ b/MTvote.html
@@ -20,6 +20,9 @@ $(function () {
 		    credits: {
             text: 'Produced by: Jordan Branch',
         },
+        exporting: {
+            enabled: false
+        },
         title: {
             text: 'Manchin-Toomey Amendment Senate <br> Voting Outcome'
         },
