--- a/bipartisanSupport.html
+++ b/bipartisanSupport.html
@@ -15,6 +15,9 @@ $(function () {
         chart: {
             type: 'bar'
         },
+        exporting: {
+            enabled: false
+        },
         title: {
             text: 'Bipartisan Support of Gun Proposals'
         },
