--- a/money.html
+++ b/money.html
@@ -14,6 +14,9 @@ $(function () {
         chart: {
             type: 'column'
         },
+        exporting: {
+            enabled: false
+        },
 		    credits: {
             text: 'Produced by: Jordan Branch',
         },
