--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -31,6 +31,9 @@ $(function () {
             text: 'Source: <a href="http://webappa.cdc.gov/sasweb/ncipc/mortrate10_us.html">Centers for Disease Control</a>',
             x: -20
         },
+        exporting: {
+            enabled: false
+        },
         xAxis: {
             categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013']
         },
