--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -20,6 +20,9 @@ $(function () {
   });
     $('#container').highcharts({
         colors: ['#910000'],
+        exporting: {
+            enabled: false
+        },
         title: {
             text: 'Number of Gun-Related Deaths in the United States, Yearly',
             x: -20 //center
@@ -30,9 +33,6 @@ $(function () {
         subtitle: {
             text: 'Source: <a href="http://webappa.cdc.gov/sasweb/ncipc/mortrate10_us.html">Centers for Disease Control</a>',
             x: -20
-        },
-        exporting: {
-            enabled: false
         },
         xAxis: {
             categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013']
@@ -53,7 +53,8 @@ $(function () {
             layout: 'vertical',
             align: 'right',
             verticalAlign: 'middle',
-            borderWidth: 0
+            borderWidth: 0,
+            enabled: false
         },
         series: [{
             name: 'USA',
