--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -38,6 +38,7 @@ $(function () {
             categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013']
         },
         yAxis: {
+            min: 0,
             title: {
                 text: 'Number of Deaths'
             },
