added labels to money.html

--- a/money.html
+++ b/money.html
@@ -50,7 +50,11 @@ $(function () {
         plotOptions: {
             column: {
                 pointPadding: 0.2,
-                borderWidth: 0
+                borderWidth: 0,
+                dataLabels: {
+                    enabled:true,
+                    format: '{point.y:.1f}K',
+                }
             }
         },
         series: [{
