--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>                                                                                      
 <html>
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -9,55 +9,58 @@
 </head>
 <script>
 $(function () {
-  Highcharts.setOptions({
-    global: {
-      useUTC: false,
-    },
-    lang: {
-      decimalPoint: ',',
-      thousandsSep: ','
-    }
-  });
     $('#container').highcharts({
-        colors: ['#910000'],
+        chart: {
+            type: 'area'
+        },
         exporting: {
             enabled: false
         },
         title: {
             text: 'Number of Gun-Related Deaths in the United States, Yearly',
-            x: -20 //center
         },
-		    credits: {
-            text: 'Produced by: Jordan Branch',
+        credits: {
+            text:'',
         },
         subtitle: {
             text: 'Source: <a href="http://webappa.cdc.gov/sasweb/ncipc/mortrate10_us.html">Centers for Disease Control</a>',
-            x: -20
         },
         xAxis: {
-            categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013']
+            categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013'],
         },
         yAxis: {
-            min: 0,
             title: {
-                text: 'Number of Deaths'
+                text: 'Nuclear weapon states'
             },
-            plotLines: [{
-                value: 0,
-                width: 1,
-                color: '#808080'
-            }]
+            labels: {
+                formatter: function () {
+                    return this.value / 1000 + 'k';
+                }
+            }
         },
         tooltip: {
+            pointFormat: '<b>{point.y:,.0f}</b><br/>gun related deaths in {point.x}'
         },
         legend: {
-            layout: 'vertical',
-            align: 'right',
-            verticalAlign: 'middle',
-            borderWidth: 0,
-            enabled: false
+            enabled:false,
         },
-        series: [{
+        plotOptions: {
+            area: {
+                color:'#660000',
+                pointStart: 1999,
+                marker: {
+                    enabled: false,
+                    symbol: 'circle',
+                    radius: 1,
+                    states: {
+                        hover: {
+                            enabled: true
+                        }
+                    }
+                }
+            },
+        },
+    series: [{
             name: 'USA',
             data: [28874, 28663, 29573, 30242, 30136, 29569, 30694, 30896, 31224, 31593, 31347, 31672, 32351, 33563, 33636]
         },]
@@ -67,4 +70,4 @@ $(function () {
 <body>
 <div id="container" style="height: 400px; margin: 0 auto"></div>
 </body>
-</html>
+</html>   
