--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="UTF-8">
 <title>Manchin and NRA</title>
 </head>
@@ -24,24 +26,37 @@ $(function () {
         title: {
             text: 'Joe Manchin Election Cycle Campaign Contributions'
         },
+		credits:{
+			  enabled: false,
+		  },
         xAxis: {
-            categories: ['2010', '2012', '2014']
+            categories: ['2010', '2012', '2014'],
+			labels: {
+                style: {
+                    fontSize:'.9rem'
+                }
+            }
         },
         yAxis: {
             min: 0,
             title: {
                 text: 'Total money spent on Manchin by top two gun control PACs'
+            },
+			labels: {
+                style: {
+                    fontSize:'.9rem'
+                }
             }
         },
         legend: {
-            reversed: true
+            reversed: true,
         },
         plotOptions: {
             series: {
                 stacking: 'normal'
             },
           dataLabels:{
-            enabled: true
+            enabled: true,
           }
         },
         series: [{
