--- a/money.html
+++ b/money.html
@@ -53,7 +53,7 @@ $(function () {
                 borderWidth: 0,
                 dataLabels: {
                     enabled:true,
-                    format: '{point.y:.1f}K',
+                    format: '{point.y}K',
                 }
             }
         },
