--- a/MTvote.html
+++ b/MTvote.html
@@ -18,7 +18,7 @@ $(function () {
             type: 'pie'
         },
 		    credits: {
-            text: 'Produced by: Jordan Branch',
+            enabled: false,
         },
         exporting: {
             enabled: false
