--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -29,6 +29,9 @@ $(function () {
 		credits:{
 			  enabled: false,
 		  },
+		  subtitle: {
+            text: 'Source: <a href="http://www.fec.gov/">Federal Election Commission</a>'
+        },
         xAxis: {
             categories: ['2010', '2012', '2014'],
 			labels: {
