--- a/main.html
+++ b/main.html
@@ -37,6 +37,8 @@
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
 <iframe src="money.html" frameBorder="0"></iframe>
 <p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
+<iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
 </div>
 </body>
 </html>
