--- a/money.html
+++ b/money.html
@@ -21,7 +21,7 @@ $(function () {
             text: 'Produced by: Jordan Branch',
         },
         title: {
-            text: 'PAC Contributions to Senators leading up to Manchin-Toomey Amendment'
+            text: 'PAC Contributions to senators leading up to Manchin-Toomey Amendment (2007-March 2013)'
         },
         subtitle: {
             text: 'Source: <a href="https://www.opensecrets.org/news/issues/guns/vote_2013.php">Opensecrets.org</a>'
