--- a/Gun_related_deaths.html
+++ b/Gun_related_deaths.html
@@ -29,21 +29,35 @@
             text: 'Number of Gun-Related Deaths in the United States, Yearly',
         },
         credits: {
-            text:'',
+            enabled: false
         },
         subtitle: {
-            text: 'Source: <a href="http://webappa.cdc.gov/sasweb/ncipc/mortrate10_us.html">Centers for Disease Control</a>',
+            text: 'Source: Centers for Disease Control',
+			style: {
+                    fontSize:'.9rem'
+                }
         },
         xAxis: {
             categories: ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013'],
+			labels: {
+                style: {
+                    fontSize:'.9rem'
+                }
+            }
         },
         yAxis: {
             title: {
-                text: 'Nuclear weapon states'
+                text: 'Number of gun-related deaths',
+				style: {
+                    fontSize:'.9rem'
+                }
             },
             labels: {
                 formatter: function () {
                     return this.value / 1000 + 'k';
+                },
+				style: {
+                    fontSize:'.9rem'
                 }
             }
         },
