--- a/MTvote.html
+++ b/MTvote.html
@@ -26,9 +26,6 @@ $(function () {
         title: {
             text: 'Manchin-Toomey Amendment Senate <br> Voting Outcome'
         },
-        subtitle: {
-            text: 'Source: <a href="https://www.opensecrets.org/news/issues/guns/vote_2013.php">Opensecrets.org</a>'
-        },
         tooltip: {
             pointFormat: '{series.name}: <b>{point.percentage} votes</b>'
         },
@@ -37,10 +34,11 @@ $(function () {
                 allowPointSelect: true,
                 cursor: 'pointer',
                 dataLabels: {
-                    enabled: true,
+                    enabled: false,
                     format: '<b>{point.name}</b>: {point.percentage} votes',
                     style: {
-                        color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                        color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black',
+						 fontSize:'.8rem'
                     }
                 }
             }
