--- a/Feinstein.html
+++ b/Feinstein.html
@@ -18,6 +18,9 @@ $(function () {
         title: {
             text: 'Sen. Diane Feinstein Gun Control Amendment',
         },
+		exporting: {
+            enabled: false
+        },
       credits: {
       enabled: false,
     },
