--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -21,6 +21,9 @@ $(function () {
       credits: {
       enabled: false,
     },
+	exporting: {
+            enabled: false
+        },
         tooltip: {
             pointFormat: '{series.name}: <b>{point.y}</b>'
         },
