change font color

--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -66,6 +66,7 @@ $(function () {
                 stacking: 'normal',
 				dataLabels:{
             enabled: true,
+			color: "black",
 		  }
             },
         },
