--- a/main.html
+++ b/main.html
@@ -38,14 +38,14 @@
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
 <h1>Gun Control Lobby here</h1>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
+<p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
+<p>The NRA withdrew support and ran a television campaign ad against the senator, as he ran for re-election in the next election cycle.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
+<p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed. The first gun control amendments to hit the Senate floor came after the Bernardino mass shooting at the beginning of December.</p>
 </div>
 <div class="banner4"></div>
 <div id="content">
+<p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior.
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
 </div>
