--- a/main.html
+++ b/main.html
@@ -45,18 +45,18 @@
 </div>
 <div class="banner4"></div>
 <div id="content">
-<p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior.
+<p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior. The second amendment was introduced by Sen. Diane Feinstein and suggested restrictions on people to purchase guns who are on a federal terrorism watch list. Both Amendments failed. 
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
 </div>
 <div class="flex">
 <iframe src="Manchin-ToomeyPart2.html" frameBorder="0"></iframe>
 </div>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
+<p>Those who voted on both of Toomey's appearances in the Senate largely voted the same as they had in 2013. The amendments both needed 60 votes to progress, but lost on a close margin.</p>
+<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests. Sen. John Cornyn, as a whip, was one of the strongest ovoices of the opposition to the bills.</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
-<p>Gun Rights PACs contributed over $500,000 to senators who voted against Manchin-Toomey but contributed less than $70,000 to senators who voted for Manchin-Toomey. On the other hand, Gun Control PACs have contributed a mere total of $5,000 to senators.</p>
+<p>Cornyn began receiving money from gun rights PACs after he voted against Toomey's amendment in 2013. Before that, he had minimally benefited from NRA and Safari Club International's investment in gun-control legislation outcomes.</p>
+<p>This year, there have been more mass shootings than there are days in the year. While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Saturday night, the president gave an address to the nation once again calling for change.</p>
 </div>
 </body>
 </html>
