--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 <div id="content">
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
-<h1>Gun Control Lobby here</h1>
+<iframe src="NRASpending.html" frameBorder="0"></iframe>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
 <p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
 <p>The NRA withdrew support and ran a television campaign ad against the senator, as he ran for re-election in the next election cycle.</p>
