--- a/bipartisanSupport.html
+++ b/bipartisanSupport.html
@@ -25,7 +25,7 @@ $(function () {
             enabled: false,
         },
         subtitle: {
-            text: 'Pew Research',
+            text: 'Source: Pew Research',
 			style: {
                     fontSize:'.9rem'
                 }
