--- a/bipartisanSupport.html
+++ b/bipartisanSupport.html
@@ -19,7 +19,7 @@ $(function () {
             enabled: false
         },
         title: {
-            text: 'Bipartisan Support of Gun Proposals'
+            text: 'Bipartisan Support of Gun Proposals in 2013'
         },
 		    credits: {
             enabled: false,
