--- a/main.html
+++ b/main.html
@@ -19,33 +19,46 @@
 <div class="timeline">
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe></div>
 <p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
+<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
 <iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
 <p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 </div>
 <div class="banner2"></div>
 <div id="content">
 <p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
 <p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <div class="infogram">
 <iframe src="https://infogr.am/manchin_toomey_amendment_voting_outcome?src=embed" title="Manchin-Toomey Amendment voting outcome" width="550" height="596" scrolling="no" frameborder="0" style="border:none;"></iframe></div>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 </div>
 <div class="banner3"></div>
 <div id="content">
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf </p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf </p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf </p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
 <p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
 <p>The NRA withdrew support and ran a television campaign ad against the senator, as he ran for re-election in the next election cycle.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
 <p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed. The first gun control amendments to hit the Senate floor came after the Bernardino mass shooting at the beginning of December.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 </div>
 <div class="banner4"></div>
 <div id="content">
 <p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior. The second amendment was introduced by Sen. Diane Feinstein and suggested restrictions on people to purchase guns who are on a federal terrorism watch list. Both Amendments failed. 
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
 </div>
@@ -55,9 +68,11 @@
 <p>Those who voted on both of Toomey's appearances in the Senate largely voted the same as they had in 2013. The amendments both needed 60 votes to progress, but lost on a close margin.</p>
 <p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests. Sen. John Cornyn, as a whip, was one of the strongest ovoices of the opposition to the bills.</p>
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
 <p>Cornyn began receiving money from gun rights PACs after he voted against Toomey's amendment in 2013. Before that, he had minimally benefited from NRA and Safari Club International's investment in gun-control legislation outcomes.</p>
 <p>This year, there have been more mass shootings than there are days in the year. While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Saturday night, the president gave an address to the nation once again calling for change.</p>
+<p>dadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjfdadjfaldjflkajsdfjadfjaldjflkdjfjadf aajkldfjaldjfladjfajdfajdfjadjfadjfjdfajdlfjakdjfadjfksdjfajdfjdjfdjf</p>
 </div>
 </body>
 </html>
