--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -65,7 +65,7 @@ $(function () {
             series: {
                 stacking: 'normal',
 				dataLabels:{
-            enabled: true,
+            enabled: false,
 			color: "black",
 		  }
             },
