--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -21,6 +21,7 @@ $(function () {
       credits: {
       enabled: false,
     },
+	colors: ['#aaa','#ccc', 'yellow'],
 	exporting: {
             enabled: false
         },
