--- a/Feinstein.html
+++ b/Feinstein.html
@@ -24,6 +24,7 @@ $(function () {
       credits: {
       enabled: false,
     },
+	colors: ['#aaa','#ccc', 'yellow'],
         tooltip: {
             pointFormat: '{series.name}: <b>{point.y}</b>'
         },
