changed vote and title

--- a/Feinstein.html
+++ b/Feinstein.html
@@ -50,7 +50,7 @@ $(function () {
             data: [
                 ['Yes',   45],
                 ['No',       54],
-              ['Not Present', 1],
+              ['No Vote', 1],
                 {
                     name: 'Proprietary or Undetectable',
                     y: 0,
