--- a/Manchin-ToomeyPart2.html
+++ b/Manchin-ToomeyPart2.html
@@ -45,12 +45,12 @@ $(function () {
         },
         series: [{
             type: 'pie',
-            name: 'Manchin Toomey Gun Control Amendment Second Vote',
+            name: 'Revived Manchin-Toomey Background Check Amendment',
             innerSize: '50%',
             data: [
-                ['Yes',   50],
-                ['No',       48],
-              ['Not Present', 2],
+                ['Yes',   48],
+                ['No',       50],
+              ['No vote', 2],
                 {
                     name: 'Proprietary or Undetectable',
                     y: 0,
