--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -50,7 +50,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total money spent on Manchin by top two gun control PACs'
+                text: 'Total money spent on Manchin by top two gun rights PACs'
             },
 			labels: {
                 style: {
