--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -55,7 +55,8 @@ $(function () {
 			labels: {
                 style: {
                     fontSize:'.8rem'
-                }
+                },
+				format: '${value:,.0f}'
             }
         },
         legend: {
