--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -55,7 +55,8 @@ $(function () {
 			labels: {
                 style: {
                     fontSize:'.8rem'
-                }
+                },
+				format: '${value:,.0f}'
             }
         },
         legend: {
@@ -71,7 +72,7 @@ $(function () {
         },
         series: [{
             name: 'Safari Club International',
-            data: [0, 5000, 1000]
+            data: [0, 5000, 1000],
         }, {
             name: 'National Rifle Association',
             data: [4950, 6500, 0]
