--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -25,7 +25,7 @@ $(function () {
             type: 'bar'
         },
         title: {
-            text: 'Sen. John Cornyn Campaign Contributions'
+            text: 'Sen. John Cornyn Election Cycle Campaign Contributions'
         },
 		credits:{
 			  enabled: false,
