screwed up the numbers

--- a/NRASpending.html
+++ b/NRASpending.html
@@ -26,7 +26,7 @@ $(function () {
         chart: {
             type: 'column'
         },
-      colors: ['#aaa','#ccc', 'yellow'],
+      colors: ['#ddd','#ccc', '#aaa'],
         title: {
             text: 'Money spent by the NRA on campaigns and candidates'
         },
@@ -114,7 +114,7 @@ $(function () {
                     ],
                     [
                         'Independent Expenditures',
-                        71662727
+                        7162727
                     ]
                 ]
             }, {
@@ -127,7 +127,7 @@ $(function () {
                     ],
                     [
                         'Independent Expenditures',
-                        1465500
+                        11159493
                     ]
                   ]
             }, {
