font-size change

--- a/MTvote.html
+++ b/MTvote.html
@@ -24,7 +24,7 @@ $(function () {
             enabled: false
         },
         title: {
-            text: 'Manchin-Toomey Amendment Senate <br> Voting Outcome'
+            text: 'Manchin-Toomey Amendment Senate <br> 2013 Voting Outcome'
         },
         tooltip: {
             pointFormat: '{series.name}: <b>{point.percentage} votes</b>'
