--- a/Feinstein.html
+++ b/Feinstein.html
@@ -36,6 +36,7 @@ $(function () {
                     style: {
                         fontWeight: 'bold',
                         color: 'black',
+						 fontSize:'.8rem'
                     }
                 },
                 startAngle: -90,
