--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -50,7 +50,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total money spent on Cornyn by top two gun rights PACs'
+                text: 'Total money spent on Cornyn by top two gun rights PACs',
             },
 			labels: {
                 style: {
