--- a/NRASpending.html
+++ b/NRASpending.html
@@ -49,13 +49,11 @@ $(function () {
         },
         yAxis: {
             title: {
-                text: 'Total dollars spent'
-            },
-			labels:{
+                text: 'Total dollars spent',
 				style: {
                     fontSize:'.9rem'
                 }
-			}
+            },
 
         },
         legend: {
