--- a/main.html
+++ b/main.html
@@ -43,6 +43,7 @@
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
 <p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
 <p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
+<div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: 54</strong> <br> <strong> No: 46 <br></strong> 60 votes were needed to pass the amendment</div>
 <p>"We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. </p>
 <iframe src="Manchin_NRA.html" frameBorder="0"></iframe>
 <p>Manchin received substancial funds from the National Rifle Association and Safari Club International up until the election cycle after the proposed amendment. Afterward, he largely lost financial support from the top two gun control groups.</p>
